# Shiden

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: check.yml  release.yml
examples/: brainfuck.sd  shiden.toml
examples/src/: main.sd
src/: main.rs
src/cli/: mod.rs
src/format/: mod.rs
src/frontend/: mod.rs
src/interpreter/: mod.rs
src/libraries/filesystem/: README.md  filesystem.sd
src/syntax/: mod.rs
test/: shiden.toml
test/src/: main.sd
tests/: brainfuck_integration.rs
vscode-extension/: README.md  build.sh  format.sh  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/archived/: shiden-0.0.1.vsix  shiden-0.0.2.vsix  shiden-0.0.3.vsix  shiden-0.0.4.vsix  shiden-0.1.0.vsix  shiden-0.1.1.vsix
vscode-extension/examples/: highlight.sd
vscode-extension/snippets/: shiden.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: shiden.tmLanguage.json
