[package]
name = "shiden"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
object = { version = "0.30", features = ["write_core"] }
byteorder = "1.4"

tempfile = "3"

[dev-dependencies]
libc = "0.2"